[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.19.0"
uvloop = "^0.17.0"
websockets = "^10.4"
pydantic = "^1.10.2"
aiohttp = "^3.8.3"
yoyo-migrations = "^8.1.0"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
fastapi = "^0.87.0"
envparse = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
